--- a/Kanox.css
+++ b/Kanox.css
@@ -434,8 +434,7 @@ html {
   }
 
   .article_2 .row .text-column {
-    position: relative;
-    left: 10vw;
+    margin-left: 10vw;
   }
   .portfolio .image-column {
     padding: 0;
@@ -452,8 +451,7 @@ html {
     justify-items: left;
     height: auto;
     width: 30vw;
-    position: relative;
-    left: 10vw;
+    margin-left: 10vw;
   }
   .text-column h1 {
     margin-top: 2vh;
@@ -1344,8 +1342,7 @@ html {
   }
 
   .article_2 .row .text-column {
-    position: relative;
-    left: 10vw;
+    margin-left: 10vw;
   }
   .portfolio .image-column {
     padding: 0;
